# ConsumerAssistant

./: README.md  package-lock.json  pubspec.yaml
android/app/: build.gradle  google-services.json
assets/: tessdata_config.json
lib/: Scanner.dart  TesseractTextRecognizer.dart  constants.dart  firebase_options.dart  loading.dart  main.dart  native_opencv.dart  navigationBar.dart  tesseract_text_recognizer.dart
lib/config/: constants.dart  firebase_options.dart
lib/databases/: Ingredient_provider.dart  abstract_provider.dart  ingredients.dart  local_database.dart
lib/models/: app_user.dart  article.dart  enums.dart  ingredient.dart  ingredient_name.dart  models.dart  product.dart
lib/screens/: enums.dart  ingredientsScreen.dart  loading.dart  loading_panel.dart  navigation_bar.dart  sorting_and_filtering.dart  wrapper.dart
lib/screens/account/: account_background_widget.dart  account_screen.dart  account_screen_widgets.dart
lib/screens/articles/: article_body.dart  article_item.dart  articles_screen.dart
lib/screens/authentication/: authentication.dart  (+7 more)
lib/services/: articles_service.dart  authentication_service.dart  database_service.dart  ingredients_service.dart  notifications_service.dart  products_service.dart  services.dart  storage_service.dart
lib/text_recognition/: tesseract_text_recognizer.dart
lib/widgets/: ingredientItem.dart
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/lib/: native_opencv.cpp
test/: sorting_and_filtering_test.dart  trick_searcher_test.dart  widget_test.dart
(+39 files in other folders)
